--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <svg width="1200" height="800">
       </svg>
     </div>
-    <script src="d3.js" charset="utf-8"></script>
+    <script src="lib/d3.js" charset="utf-8"></script>
     <script src='watchout.js'></script>
 </body>
 
